# FaceSwap

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.demo  README.md  docker-compose.yaml  install.sh  pyproject.toml  requirements.txt  test_wholeimage_swapspecific.py  webcam.py
app/: README.md  faceswap.py  logger.py  main.py  requirements.txt  schemas.py
demo/: README.md  app.py  config.json  requirements.txt  run.sh  video.py
face_swap/notebook/: face_alignment.ipynb
google_credential/: client_secret_685878340013-tq1op2etciprgf02lbr7882r6i66f4h7.apps.googleusercontent.com.json
lib/: download_model.sh  requirements.txt  utils.py
lib/models/: fs_model.py  fs_networks.py
lib/notebook/: face_recognition.ipynb
models/: base_model.py  fs_model.py  fs_networks.py  models.py  networks.py
options/: base_options.py  test_options.py
util/: reverse2original.py
